# flask_meteo_in_a_city

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  api_views.py  forms.py  models.py  settings.py  utils.py  views.py
app/static/css/: style.css
app/templates/: base.html  footer.html  header.html  index.html  login.html  register.html
migrations/versions/: 24a6b3b7cdc8_create_user_table.py  8673eb832029_create_istory_table.py  93581d68fa78_create_relation_betwin_user_and_history_.py
